test/stg/error/dataDouble1.stg
-- Duplicate constructors in Alts
-- syntax migrated by hand
not1 = FUN(b -> case b of sc{
      	       False -> true;
	       List a -> true;
	       True  -> false;
	       x -> let {a = THUNK(b)} in case a of sc{
	       	    	     	       	  False -> true;
					  False -> true;
					  y -> true}});
